toki_pona.output
State 20 conflicts: 3 shift/reduce
State 28 conflicts: 1 shift/reduce
State 29 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce
State 85 conflicts: 1 reduce/reduce
State 87 conflicts: 1 reduce/reduce
State 93 conflicts: 2 shift/reduce
State 103 conflicts: 6 shift/reduce


Grammar

    0 $accept: toki_pona $end

    1 toki_pona: sentence

    2 sentence: condition svo_sentence
    3         | o_sentence
    4         | svo_sentence

    5 o_sentence: o_sentence_1
    6           | o_sentence_2

    7 o_sentence_1: noun_phase O
    8             | noun_phase O vo_struct

    9 o_sentence_2: O vo_struct
   10             | condition O vo_struct

   11 condition: svo_sentence LA
   12          | noun_phase LA
   13          | TASO svo_sentence
   14          | KEN LA
   15          | ANTE LA

   16 svo_sentence: subject vo_struct

   17 subject: MI
   18        | SINA
   19        | norm_noun_phase LI

   20 norm_noun_phase: norm_subject_noun
   21                | structed_noun_phase

   22 structed_noun_phase: decorated_noun_struct
   23                    | noun_phase conj noun_phase

   24 noun_phase: noun
   25           | structed_noun_phase

   26 conj: EN
   27     | ANU

   28 decorated_noun_struct: noun decorator
   29                      | noun noun
   30                      | noun noun decorator

   31 decorator: decorator_word
   32          | decorator_word decorator

   33 vo_struct: verb_phase
   34          | verb_phase LI vo_struct

   35 verb_phase: no_acceptance_verb_phase
   36           | acceptance_verb_phase
   37           | verb_phase po_phase

   38 no_acceptance_verb_phase: verb_group
   39                         | LON noun_phase
   40                         | TAWA noun_phase
   41                         | modal_verb LON noun_phase
   42                         | modal_verb TAWA noun_phase

   43 acceptance_verb_phase: verb_group acceptance_obj
   44                      | modal_verb verb_group acceptance_obj

   45 acceptance_obj: E noun_phase
   46               | E noun_phase acceptance_obj

   47 verb_group: verb
   48           | modal_verb verb
   49           | verb decorator
   50           | YnN_verb
   51           | modal_verb YnN_verb
   52           | YnN_verb decorator

   53 YnN_verb: verb ALA verb

   54 po_phase: prepostion noun_phase
   55         | prepostion noun_phase po_phase

   56 modal_verb: postive_modal_verb
   57           | negative_modal_verb
   58           | YnN_modal_verb

   59 postive_modal_verb: KAMA
   60                   | KEN
   61                   | WILE

   62 negative_modal_verb: postive_modal_verb ALA

   63 YnN_modal_verb: KAMA ALA KAMA
   64               | KEN ALA KEN
   65               | WILE ALA WILE

   66 verb: IJO SULI KEN PALI UTALA PIMEJA SELI KULE SONA OPEN PANA TAWA AWEN JAKI KAMA TOKI MUTE LETE LILI KEPEKEN LON MOLI JAN ANTE LAWA WEKA SITELEN TOMO ANPA MUSI

   67 noun: MI
   68     | SINA
   69     | norm_subject_noun

   70 norm_subject_noun: SUPA MANI SIJELO POKI AKESI IKE SINPIN ILO PILIN LINJA MA NIMI WAN MI UNPA LEN LIPU MAMA NASIN SOWELI NANPA OKO SUNO TU KILI LUKA OLIN KALA WILE SINA KIWEN NOKA PINI MUN NENA JO SELO INSA MONSI NI PIPI TELO TENPO MIJE KASI WALO WASO LUPA TAN PALISA PAKALA SEME

   71 decorator_word: ALA TASO MELI SINA MI SIN WAWA UTA ALE JELO MOKU ALI SEWI KIN NASA LAPE SUWI ONA POKA KALAMA LASO PONA SAMA LUKIN KULUPU WIKE SIKE LOJE KUTE

   72 prepostion: KEPEKEN
   73           | LON
   74           | POKA
   75           | SAMA
   76           | TAN
   77           | TAWA


Terminals, with rules where they appear

$end (0) 0
error (256)
ILO (258) 70
PALISA (259) 70
LIPU (260) 70
OLIN (261) 70
ANTE (262) 15 66
WASO (263) 70
UNPA (264) 70
SIJELO (265) 70
TENPO (266) 70
LILI (267) 66
LAPE (268) 71
PINI (269) 70
KIN (270) 71
IJO (271) 66
MUN (272) 70
PALI (273) 66
SELI (274) 66
LINJA (275) 70
PAKALA (276) 70
KULE (277) 66
WILE (278) 61 65 70
LUPA (279) 70
UTA (280) 71
ALI (281) 71
KULUPU (282) 71
ONA (283) 71
SIN (284) 71
UTALA (285) 66
MONSI (286) 70
LEN (287) 70
SITELEN (288) 66
MI (289) 17 67 70 71
KASI (290) 70
MUSI (291) 66
AWEN (292) 66
JO (293) 70
NASA (294) 71
NENA (295) 70
WAN (296) 70
PIMEJA (297) 66
KILI (298) 70
SELO (299) 70
SONA (300) 66
OKO (301) 70
TU (302) 70
KALAMA (303) 71
SIKE (304) 71
SINA (305) 18 68 70 71
INSA (306) 70
KALA (307) 70
JELO (308) 71
PILIN (309) 70
PONA (310) 71
NIMI (311) 70
PANA (312) 66
TASO (313) 13 71
KEN (314) 14 60 64 66
JAKI (315) 66
MELI (316) 71
LOJE (317) 71
SINPIN (318) 70
PIPI (319) 70
MUTE (320) 66
WIKE (321) 71
TOKI (322) 66
MANI (323) 70
JAN (324) 66
TAWA (325) 40 42 66 77
KEPEKEN (326) 66 72
LUKIN (327) 71
TAN (328) 70 76
AKESI (329) 70
KAMA (330) 59 63 66
NOKA (331) 70
MOKU (332) 71
LAWA (333) 66
TELO (334) 70
LASO (335) 71
WEKA (336) 66
IKE (337) 70
LETE (338) 66
MOLI (339) 66
LON (340) 39 41 66 73
SUPA (341) 70
NASIN (342) 70
TOMO (343) 66
KUTE (344) 71
SUNO (345) 70
POKI (346) 70
SEME (347) 70
MA (348) 70
SOWELI (349) 70
NI (350) 70
MAMA (351) 70
MIJE (352) 70
WALO (353) 70
NANPA (354) 70
ALA (355) 53 62 63 64 65 71
KIWEN (356) 70
OPEN (357) 66
POKA (358) 71 74
LUKA (359) 70
SAMA (360) 71 75
SULI (361) 66
ALE (362) 71
SEWI (363) 71
ANPA (364) 66
WAWA (365) 71
SUWI (366) 71
LI (367) 19 34
LA (368) 11 12 14 15
O (369) 7 8 9 10
ANU (370) 27
EN (371) 26
E (372) 45 46


Nonterminals, with rules where they appear

$accept (118)
    on left: 0
toki_pona (119)
    on left: 1, on right: 0
sentence (120)
    on left: 2 3 4, on right: 1
o_sentence (121)
    on left: 5 6, on right: 3
o_sentence_1 (122)
    on left: 7 8, on right: 5
o_sentence_2 (123)
    on left: 9 10, on right: 6
condition (124)
    on left: 11 12 13 14 15, on right: 2 10
svo_sentence (125)
    on left: 16, on right: 2 4 11 13
subject (126)
    on left: 17 18 19, on right: 16
norm_noun_phase (127)
    on left: 20 21, on right: 19
structed_noun_phase (128)
    on left: 22 23, on right: 21 25
noun_phase (129)
    on left: 24 25, on right: 7 8 12 23 39 40 41 42 45 46 54 55
conj (130)
    on left: 26 27, on right: 23
decorated_noun_struct (131)
    on left: 28 29 30, on right: 22
decorator (132)
    on left: 31 32, on right: 28 30 32 49 52
vo_struct (133)
    on left: 33 34, on right: 8 9 10 16 34
verb_phase (134)
    on left: 35 36 37, on right: 33 34 37
no_acceptance_verb_phase (135)
    on left: 38 39 40 41 42, on right: 35
acceptance_verb_phase (136)
    on left: 43 44, on right: 36
acceptance_obj (137)
    on left: 45 46, on right: 43 44 46
verb_group (138)
    on left: 47 48 49 50 51 52, on right: 38 43 44
YnN_verb (139)
    on left: 53, on right: 50 51 52
po_phase (140)
    on left: 54 55, on right: 37 55
modal_verb (141)
    on left: 56 57 58, on right: 41 42 44 48 51
postive_modal_verb (142)
    on left: 59 60 61, on right: 56 62
negative_modal_verb (143)
    on left: 62, on right: 57
YnN_modal_verb (144)
    on left: 63 64 65, on right: 58
verb (145)
    on left: 66, on right: 47 48 49 53
noun (146)
    on left: 67 68 69, on right: 24 28 29 30
norm_subject_noun (147)
    on left: 70, on right: 20 69
decorator_word (148)
    on left: 71, on right: 31 32
prepostion (149)
    on left: 72 73 74 75 76 77, on right: 54 55


state 0

    0 $accept: . toki_pona $end
    1 toki_pona: . sentence
    2 sentence: . condition svo_sentence
    3         | . o_sentence
    4         | . svo_sentence
    5 o_sentence: . o_sentence_1
    6           | . o_sentence_2
    7 o_sentence_1: . noun_phase O
    8             | . noun_phase O vo_struct
    9 o_sentence_2: . O vo_struct
   10             | . condition O vo_struct
   11 condition: . svo_sentence LA
   12          | . noun_phase LA
   13          | . TASO svo_sentence
   14          | . KEN LA
   15          | . ANTE LA
   16 svo_sentence: . subject vo_struct
   17 subject: . MI
   18        | . SINA
   19        | . norm_noun_phase LI
   20 norm_noun_phase: . norm_subject_noun
   21                | . structed_noun_phase
   22 structed_noun_phase: . decorated_noun_struct
   23                    | . noun_phase conj noun_phase
   24 noun_phase: . noun
   25           | . structed_noun_phase
   28 decorated_noun_struct: . noun decorator
   29                      | . noun noun
   30                      | . noun noun decorator
   67 noun: . MI
   68     | . SINA
   69     | . norm_subject_noun
   70 norm_subject_noun: . SUPA MANI SIJELO POKI AKESI IKE SINPIN ILO PILIN LINJA MA NIMI WAN MI UNPA LEN LIPU MAMA NASIN SOWELI NANPA OKO SUNO TU KILI LUKA OLIN KALA WILE SINA KIWEN NOKA PINI MUN NENA JO SELO INSA MONSI NI PIPI TELO TENPO MIJE KASI WALO WASO LUPA TAN PALISA PAKALA SEME

    ANTE  shift, and go to state 1
    MI    shift, and go to state 2
    SINA  shift, and go to state 3
    TASO  shift, and go to state 4
    KEN   shift, and go to state 5
    SUPA  shift, and go to state 6
    O     shift, and go to state 7

    toki_pona              go to state 8
    sentence               go to state 9
    o_sentence             go to state 10
    o_sentence_1           go to state 11
    o_sentence_2           go to state 12
    condition              go to state 13
    svo_sentence           go to state 14
    subject                go to state 15
    norm_noun_phase        go to state 16
    structed_noun_phase    go to state 17
    noun_phase             go to state 18
    decorated_noun_struct  go to state 19
    noun                   go to state 20
    norm_subject_noun      go to state 21


state 1

   15 condition: ANTE . LA

    LA  shift, and go to state 22


state 2

   17 subject: MI .  [IJO, WILE, KEN, TAWA, KAMA, LON]
   67 noun: MI .  [MI, SINA, SUPA, ALA, LA, O, ANU, EN]

    IJO       reduce using rule 17 (subject)
    WILE      reduce using rule 17 (subject)
    KEN       reduce using rule 17 (subject)
    TAWA      reduce using rule 17 (subject)
    KAMA      reduce using rule 17 (subject)
    LON       reduce using rule 17 (subject)
    $default  reduce using rule 67 (noun)


state 3

   18 subject: SINA .  [IJO, WILE, KEN, TAWA, KAMA, LON]
   68 noun: SINA .  [MI, SINA, SUPA, ALA, LA, O, ANU, EN]

    IJO       reduce using rule 18 (subject)
    WILE      reduce using rule 18 (subject)
    KEN       reduce using rule 18 (subject)
    TAWA      reduce using rule 18 (subject)
    KAMA      reduce using rule 18 (subject)
    LON       reduce using rule 18 (subject)
    $default  reduce using rule 68 (noun)


state 4

   13 condition: TASO . svo_sentence
   16 svo_sentence: . subject vo_struct
   17 subject: . MI
   18        | . SINA
   19        | . norm_noun_phase LI
   20 norm_noun_phase: . norm_subject_noun
   21                | . structed_noun_phase
   22 structed_noun_phase: . decorated_noun_struct
   23                    | . noun_phase conj noun_phase
   24 noun_phase: . noun
   25           | . structed_noun_phase
   28 decorated_noun_struct: . noun decorator
   29                      | . noun noun
   30                      | . noun noun decorator
   67 noun: . MI
   68     | . SINA
   69     | . norm_subject_noun
   70 norm_subject_noun: . SUPA MANI SIJELO POKI AKESI IKE SINPIN ILO PILIN LINJA MA NIMI WAN MI UNPA LEN LIPU MAMA NASIN SOWELI NANPA OKO SUNO TU KILI LUKA OLIN KALA WILE SINA KIWEN NOKA PINI MUN NENA JO SELO INSA MONSI NI PIPI TELO TENPO MIJE KASI WALO WASO LUPA TAN PALISA PAKALA SEME

    MI    shift, and go to state 2
    SINA  shift, and go to state 3
    SUPA  shift, and go to state 6

    svo_sentence           go to state 23
    subject                go to state 15
    norm_noun_phase        go to state 16
    structed_noun_phase    go to state 17
    noun_phase             go to state 24
    decorated_noun_struct  go to state 19
    noun                   go to state 20
    norm_subject_noun      go to state 21


state 5

   14 condition: KEN . LA

    LA  shift, and go to state 25


state 6

   70 norm_subject_noun: SUPA . MANI SIJELO POKI AKESI IKE SINPIN ILO PILIN LINJA MA NIMI WAN MI UNPA LEN LIPU MAMA NASIN SOWELI NANPA OKO SUNO TU KILI LUKA OLIN KALA WILE SINA KIWEN NOKA PINI MUN NENA JO SELO INSA MONSI NI PIPI TELO TENPO MIJE KASI WALO WASO LUPA TAN PALISA PAKALA SEME

    MANI  shift, and go to state 26


state 7

    9 o_sentence_2: O . vo_struct
   33 vo_struct: . verb_phase
   34          | . verb_phase LI vo_struct
   35 verb_phase: . no_acceptance_verb_phase
   36           | . acceptance_verb_phase
   37           | . verb_phase po_phase
   38 no_acceptance_verb_phase: . verb_group
   39                         | . LON noun_phase
   40                         | . TAWA noun_phase
   41                         | . modal_verb LON noun_phase
   42                         | . modal_verb TAWA noun_phase
   43 acceptance_verb_phase: . verb_group acceptance_obj
   44                      | . modal_verb verb_group acceptance_obj
   47 verb_group: . verb
   48           | . modal_verb verb
   49           | . verb decorator
   50           | . YnN_verb
   51           | . modal_verb YnN_verb
   52           | . YnN_verb decorator
   53 YnN_verb: . verb ALA verb
   56 modal_verb: . postive_modal_verb
   57           | . negative_modal_verb
   58           | . YnN_modal_verb
   59 postive_modal_verb: . KAMA
   60                   | . KEN
   61                   | . WILE
   62 negative_modal_verb: . postive_modal_verb ALA
   63 YnN_modal_verb: . KAMA ALA KAMA
   64               | . KEN ALA KEN
   65               | . WILE ALA WILE
   66 verb: . IJO SULI KEN PALI UTALA PIMEJA SELI KULE SONA OPEN PANA TAWA AWEN JAKI KAMA TOKI MUTE LETE LILI KEPEKEN LON MOLI JAN ANTE LAWA WEKA SITELEN TOMO ANPA MUSI

    IJO   shift, and go to state 27
    WILE  shift, and go to state 28
    KEN   shift, and go to state 29
    TAWA  shift, and go to state 30
    KAMA  shift, and go to state 31
    LON   shift, and go to state 32

    vo_struct                 go to state 33
    verb_phase                go to state 34
    no_acceptance_verb_phase  go to state 35
    acceptance_verb_phase     go to state 36
    verb_group                go to state 37
    YnN_verb                  go to state 38
    modal_verb                go to state 39
    postive_modal_verb        go to state 40
    negative_modal_verb       go to state 41
    YnN_modal_verb            go to state 42
    verb                      go to state 43


state 8

    0 $accept: toki_pona . $end

    $end  shift, and go to state 44


state 9

    1 toki_pona: sentence .

    $default  reduce using rule 1 (toki_pona)


state 10

    3 sentence: o_sentence .

    $default  reduce using rule 3 (sentence)


state 11

    5 o_sentence: o_sentence_1 .

    $default  reduce using rule 5 (o_sentence)


state 12

    6 o_sentence: o_sentence_2 .

    $default  reduce using rule 6 (o_sentence)


state 13

    2 sentence: condition . svo_sentence
   10 o_sentence_2: condition . O vo_struct
   16 svo_sentence: . subject vo_struct
   17 subject: . MI
   18        | . SINA
   19        | . norm_noun_phase LI
   20 norm_noun_phase: . norm_subject_noun
   21                | . structed_noun_phase
   22 structed_noun_phase: . decorated_noun_struct
   23                    | . noun_phase conj noun_phase
   24 noun_phase: . noun
   25           | . structed_noun_phase
   28 decorated_noun_struct: . noun decorator
   29                      | . noun noun
   30                      | . noun noun decorator
   67 noun: . MI
   68     | . SINA
   69     | . norm_subject_noun
   70 norm_subject_noun: . SUPA MANI SIJELO POKI AKESI IKE SINPIN ILO PILIN LINJA MA NIMI WAN MI UNPA LEN LIPU MAMA NASIN SOWELI NANPA OKO SUNO TU KILI LUKA OLIN KALA WILE SINA KIWEN NOKA PINI MUN NENA JO SELO INSA MONSI NI PIPI TELO TENPO MIJE KASI WALO WASO LUPA TAN PALISA PAKALA SEME

    MI    shift, and go to state 2
    SINA  shift, and go to state 3
    SUPA  shift, and go to state 6
    O     shift, and go to state 45

    svo_sentence           go to state 46
    subject                go to state 15
    norm_noun_phase        go to state 16
    structed_noun_phase    go to state 17
    noun_phase             go to state 24
    decorated_noun_struct  go to state 19
    noun                   go to state 20
    norm_subject_noun      go to state 21


state 14

    4 sentence: svo_sentence .  [$end]
   11 condition: svo_sentence . LA

    LA  shift, and go to state 47

    $default  reduce using rule 4 (sentence)


state 15

   16 svo_sentence: subject . vo_struct
   33 vo_struct: . verb_phase
   34          | . verb_phase LI vo_struct
   35 verb_phase: . no_acceptance_verb_phase
   36           | . acceptance_verb_phase
   37           | . verb_phase po_phase
   38 no_acceptance_verb_phase: . verb_group
   39                         | . LON noun_phase
   40                         | . TAWA noun_phase
   41                         | . modal_verb LON noun_phase
   42                         | . modal_verb TAWA noun_phase
   43 acceptance_verb_phase: . verb_group acceptance_obj
   44                      | . modal_verb verb_group acceptance_obj
   47 verb_group: . verb
   48           | . modal_verb verb
   49           | . verb decorator
   50           | . YnN_verb
   51           | . modal_verb YnN_verb
   52           | . YnN_verb decorator
   53 YnN_verb: . verb ALA verb
   56 modal_verb: . postive_modal_verb
   57           | . negative_modal_verb
   58           | . YnN_modal_verb
   59 postive_modal_verb: . KAMA
   60                   | . KEN
   61                   | . WILE
   62 negative_modal_verb: . postive_modal_verb ALA
   63 YnN_modal_verb: . KAMA ALA KAMA
   64               | . KEN ALA KEN
   65               | . WILE ALA WILE
   66 verb: . IJO SULI KEN PALI UTALA PIMEJA SELI KULE SONA OPEN PANA TAWA AWEN JAKI KAMA TOKI MUTE LETE LILI KEPEKEN LON MOLI JAN ANTE LAWA WEKA SITELEN TOMO ANPA MUSI

    IJO   shift, and go to state 27
    WILE  shift, and go to state 28
    KEN   shift, and go to state 29
    TAWA  shift, and go to state 30
    KAMA  shift, and go to state 31
    LON   shift, and go to state 32

    vo_struct                 go to state 48
    verb_phase                go to state 34
    no_acceptance_verb_phase  go to state 35
    acceptance_verb_phase     go to state 36
    verb_group                go to state 37
    YnN_verb                  go to state 38
    modal_verb                go to state 39
    postive_modal_verb        go to state 40
    negative_modal_verb       go to state 41
    YnN_modal_verb            go to state 42
    verb                      go to state 43


state 16

   19 subject: norm_noun_phase . LI

    LI  shift, and go to state 49


state 17

   21 norm_noun_phase: structed_noun_phase .  [LI]
   25 noun_phase: structed_noun_phase .  [LA, O, ANU, EN]

    LI        reduce using rule 21 (norm_noun_phase)
    $default  reduce using rule 25 (noun_phase)


state 18

    7 o_sentence_1: noun_phase . O
    8             | noun_phase . O vo_struct
   12 condition: noun_phase . LA
   23 structed_noun_phase: noun_phase . conj noun_phase
   26 conj: . EN
   27     | . ANU

    LA   shift, and go to state 50
    O    shift, and go to state 51
    ANU  shift, and go to state 52
    EN   shift, and go to state 53

    conj  go to state 54


state 19

   22 structed_noun_phase: decorated_noun_struct .

    $default  reduce using rule 22 (structed_noun_phase)


state 20

   24 noun_phase: noun .  [$end, MI, SINA, TAWA, KEPEKEN, TAN, LON, SUPA, POKA, SAMA, LI, LA, O, ANU, EN, E]
   28 decorated_noun_struct: noun . decorator
   29                      | noun . noun
   30                      | noun . noun decorator
   31 decorator: . decorator_word
   32          | . decorator_word decorator
   67 noun: . MI
   68     | . SINA
   69     | . norm_subject_noun
   70 norm_subject_noun: . SUPA MANI SIJELO POKI AKESI IKE SINPIN ILO PILIN LINJA MA NIMI WAN MI UNPA LEN LIPU MAMA NASIN SOWELI NANPA OKO SUNO TU KILI LUKA OLIN KALA WILE SINA KIWEN NOKA PINI MUN NENA JO SELO INSA MONSI NI PIPI TELO TENPO MIJE KASI WALO WASO LUPA TAN PALISA PAKALA SEME
   71 decorator_word: . ALA TASO MELI SINA MI SIN WAWA UTA ALE JELO MOKU ALI SEWI KIN NASA LAPE SUWI ONA POKA KALAMA LASO PONA SAMA LUKIN KULUPU WIKE SIKE LOJE KUTE

    MI    shift, and go to state 55
    SINA  shift, and go to state 56
    SUPA  shift, and go to state 6
    ALA   shift, and go to state 57

    MI        [reduce using rule 24 (noun_phase)]
    SINA      [reduce using rule 24 (noun_phase)]
    SUPA      [reduce using rule 24 (noun_phase)]
    $default  reduce using rule 24 (noun_phase)

    decorator          go to state 58
    noun               go to state 59
    norm_subject_noun  go to state 60
    decorator_word     go to state 61


state 21

   20 norm_noun_phase: norm_subject_noun .  [LI]
   69 noun: norm_subject_noun .  [MI, SINA, SUPA, ALA, LA, O, ANU, EN]

    LI        reduce using rule 20 (norm_noun_phase)
    $default  reduce using rule 69 (noun)


state 22

   15 condition: ANTE LA .

    $default  reduce using rule 15 (condition)


state 23

   13 condition: TASO svo_sentence .

    $default  reduce using rule 13 (condition)


state 24

   23 structed_noun_phase: noun_phase . conj noun_phase
   26 conj: . EN
   27     | . ANU

    ANU  shift, and go to state 52
    EN   shift, and go to state 53

    conj  go to state 54


state 25

   14 condition: KEN LA .

    $default  reduce using rule 14 (condition)


state 26

   70 norm_subject_noun: SUPA MANI . SIJELO POKI AKESI IKE SINPIN ILO PILIN LINJA MA NIMI WAN MI UNPA LEN LIPU MAMA NASIN SOWELI NANPA OKO SUNO TU KILI LUKA OLIN KALA WILE SINA KIWEN NOKA PINI MUN NENA JO SELO INSA MONSI NI PIPI TELO TENPO MIJE KASI WALO WASO LUPA TAN PALISA PAKALA SEME

    SIJELO  shift, and go to state 62


state 27

   66 verb: IJO . SULI KEN PALI UTALA PIMEJA SELI KULE SONA OPEN PANA TAWA AWEN JAKI KAMA TOKI MUTE LETE LILI KEPEKEN LON MOLI JAN ANTE LAWA WEKA SITELEN TOMO ANPA MUSI

    SULI  shift, and go to state 63


state 28

   61 postive_modal_verb: WILE .  [IJO, WILE, KEN, TAWA, KAMA, LON, ALA]
   65 YnN_modal_verb: WILE . ALA WILE

    ALA  shift, and go to state 64

    ALA       [reduce using rule 61 (postive_modal_verb)]
    $default  reduce using rule 61 (postive_modal_verb)


state 29

   60 postive_modal_verb: KEN .  [IJO, WILE, KEN, TAWA, KAMA, LON, ALA]
   64 YnN_modal_verb: KEN . ALA KEN

    ALA  shift, and go to state 65

    ALA       [reduce using rule 60 (postive_modal_verb)]
    $default  reduce using rule 60 (postive_modal_verb)


state 30

   22 structed_noun_phase: . decorated_noun_struct
   23                    | . noun_phase conj noun_phase
   24 noun_phase: . noun
   25           | . structed_noun_phase
   28 decorated_noun_struct: . noun decorator
   29                      | . noun noun
   30                      | . noun noun decorator
   40 no_acceptance_verb_phase: TAWA . noun_phase
   67 noun: . MI
   68     | . SINA
   69     | . norm_subject_noun
   70 norm_subject_noun: . SUPA MANI SIJELO POKI AKESI IKE SINPIN ILO PILIN LINJA MA NIMI WAN MI UNPA LEN LIPU MAMA NASIN SOWELI NANPA OKO SUNO TU KILI LUKA OLIN KALA WILE SINA KIWEN NOKA PINI MUN NENA JO SELO INSA MONSI NI PIPI TELO TENPO MIJE KASI WALO WASO LUPA TAN PALISA PAKALA SEME

    MI    shift, and go to state 55
    SINA  shift, and go to state 56
    SUPA  shift, and go to state 6

    structed_noun_phase    go to state 66
    noun_phase             go to state 67
    decorated_noun_struct  go to state 19
    noun                   go to state 20
    norm_subject_noun      go to state 60


state 31

   59 postive_modal_verb: KAMA .  [IJO, WILE, KEN, TAWA, KAMA, LON, ALA]
   63 YnN_modal_verb: KAMA . ALA KAMA

    ALA  shift, and go to state 68

    ALA       [reduce using rule 59 (postive_modal_verb)]
    $default  reduce using rule 59 (postive_modal_verb)


state 32

   22 structed_noun_phase: . decorated_noun_struct
   23                    | . noun_phase conj noun_phase
   24 noun_phase: . noun
   25           | . structed_noun_phase
   28 decorated_noun_struct: . noun decorator
   29                      | . noun noun
   30                      | . noun noun decorator
   39 no_acceptance_verb_phase: LON . noun_phase
   67 noun: . MI
   68     | . SINA
   69     | . norm_subject_noun
   70 norm_subject_noun: . SUPA MANI SIJELO POKI AKESI IKE SINPIN ILO PILIN LINJA MA NIMI WAN MI UNPA LEN LIPU MAMA NASIN SOWELI NANPA OKO SUNO TU KILI LUKA OLIN KALA WILE SINA KIWEN NOKA PINI MUN NENA JO SELO INSA MONSI NI PIPI TELO TENPO MIJE KASI WALO WASO LUPA TAN PALISA PAKALA SEME

    MI    shift, and go to state 55
    SINA  shift, and go to state 56
    SUPA  shift, and go to state 6

    structed_noun_phase    go to state 66
    noun_phase             go to state 69
    decorated_noun_struct  go to state 19
    noun                   go to state 20
    norm_subject_noun      go to state 60


state 33

    9 o_sentence_2: O vo_struct .

    $default  reduce using rule 9 (o_sentence_2)


state 34

   33 vo_struct: verb_phase .  [$end, MI, SINA, SUPA, LA, O]
   34          | verb_phase . LI vo_struct
   37 verb_phase: verb_phase . po_phase
   54 po_phase: . prepostion noun_phase
   55         | . prepostion noun_phase po_phase
   72 prepostion: . KEPEKEN
   73           | . LON
   74           | . POKA
   75           | . SAMA
   76           | . TAN
   77           | . TAWA

    TAWA     shift, and go to state 70
    KEPEKEN  shift, and go to state 71
    TAN      shift, and go to state 72
    LON      shift, and go to state 73
    POKA     shift, and go to state 74
    SAMA     shift, and go to state 75
    LI       shift, and go to state 76

    $default  reduce using rule 33 (vo_struct)

    po_phase    go to state 77
    prepostion  go to state 78


state 35

   35 verb_phase: no_acceptance_verb_phase .

    $default  reduce using rule 35 (verb_phase)


state 36

   36 verb_phase: acceptance_verb_phase .

    $default  reduce using rule 36 (verb_phase)


state 37

   38 no_acceptance_verb_phase: verb_group .  [$end, MI, SINA, TAWA, KEPEKEN, TAN, LON, SUPA, POKA, SAMA, LI, LA, O]
   43 acceptance_verb_phase: verb_group . acceptance_obj
   45 acceptance_obj: . E noun_phase
   46               | . E noun_phase acceptance_obj

    E  shift, and go to state 79

    $default  reduce using rule 38 (no_acceptance_verb_phase)

    acceptance_obj  go to state 80


state 38

   31 decorator: . decorator_word
   32          | . decorator_word decorator
   50 verb_group: YnN_verb .  [$end, MI, SINA, TAWA, KEPEKEN, TAN, LON, SUPA, POKA, SAMA, LI, LA, O, E]
   52           | YnN_verb . decorator
   71 decorator_word: . ALA TASO MELI SINA MI SIN WAWA UTA ALE JELO MOKU ALI SEWI KIN NASA LAPE SUWI ONA POKA KALAMA LASO PONA SAMA LUKIN KULUPU WIKE SIKE LOJE KUTE

    ALA  shift, and go to state 57

    $default  reduce using rule 50 (verb_group)

    decorator       go to state 81
    decorator_word  go to state 61


state 39
